third_party/move/move-compiler/tests/move_check/typing/module_call_entry_function_was_invalid.exp
error[E04001]: restricted visibility
   ┌─ tests/move_check/typing/module_call_entry_function_was_invalid.move:26:48
   │
 8 │     fun f_private() {}
   │         --------- This function is internal to its module. Only 'public' and 'public(friend)' functions can be called outside of their module
   ·
26 │     public entry fun f_script_call_private() { X::f_private() }
   │                                                ^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_private'

